--- a/MyWindowsMediaPlayer/MainWindow.xaml
+++ b/MyWindowsMediaPlayer/MainWindow.xaml
@@ -64,7 +64,7 @@
                 </DockPanel>
                 <DockPanel Grid.Row="1">
                 <Label x:Name="timeSliderCurrentTime" Margin="10,4" Width="50" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.7" Foreground="White" HorizontalContentAlignment="Center"/>
-                <Slider x:Name="timeSlider" Width="503" Opacity="0.7" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,6"/>
+                <Slider x:Name="timeSlider" Width="503" Opacity="0.7" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,6" LargeChange="10"/>
                 <Label x:Name="timeSliderMaxTime" Margin="10,4" Width="50" VerticalAlignment="Center" Opacity="0.7" Foreground="White" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
                 </DockPanel>
                 <DockPanel Grid.Row="2">
